@@ -2,6 +2,10 @@ Revision history for Test-TempDir-Tiny
 
 {{$NEXT}}
 
+    [Fixes]
+
+    - Cleanup fixed to work in taint mode
+
 0.005     2015-07-17 16:13:55-04:00 America/New_York (TRIAL RELEASE)
 
     [Added]
